<resources>
    <string name="Error">Error</string>
    <string name="Go_to_setting">Go to setting</string>
    <string name="Grant_Permission">Grant Permission</string>
    <string name="channel_name">Voice Changer</string>
    <string name="channel_description">Voice Changer Notification</string>
    <string name="Please_grant_all_permissions">Please grant all permissions to access additional functionality.</string>
    <string name="Successfully">Successfully</string>
    <string name="share_audio">Share Audio</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="alarm">Alarm</string>
    <string name="alien">Alien</string>
    <string name="all_effects">All Effects</string>
    <string name="allow">Allow</string>
    <string name="allow_now">Allow Now</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="appShare">Best app for Change Your Voice and make more fun with Friends.</string>
    <string name="app_name">Voice Changer</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_to_delete_this_audio">Are you sure to delete this audio?</string>
    <string name="artist_name">Artist Name</string>
    <string name="atleast_2_songs">Please select atleast 2 songs to merge</string>
    <string name="audio_has_not_been_saved">Audio has not been saved. Are you sure want to exit now?</string>
    <string name="audio_has_not_been_saved_reset">Audio has not been saved. Are you sure want to reset now?</string>
    <string name="audio_not_saved">Audio not Saved</string>
    <string name="back_chipmunks">Back chipmunks</string>
    <string name="big_robot">Big robot</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cancel">Cancel</string>
    <string name="cave">Cave</string>
    <string name="change_voice">Change Voice</string>
    <string name="change_voice_language">Change Voice Language</string>
    <string name="change_your_voice_into_different">Change Your Voice Into Different</string>
    <string name="child">Child</string>
    <string name="choose_the_audio">Choose the Audio</string>
    <string name="click_the_audio_icon_above_to_start_recording">Click The Audio Icon Above to Start Recording.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="contPerDialog">You must allow Video to access photos, media and files on your device from Settings</string>
    <string name="cont_per">Change Your Voice, Make Fun Calls And Create Special Moments!</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="created">Created</string>
    <string name="death">Death</string>
    <string name="delete">Delete</string>
    <string name="do_you_want_to_exit_an_app">Do You Want To Exit an App?</string>
    <string name="done">Done</string>
    <string name="drunk">Drunk</string>
    <string name="duration">Duration</string>
    <string name="english">English</string>
    <string name="enter_minimum_words">Please enter minimum 5 words</string>
    <string name="enter_text_to_generate_audio">Enter text to generate audio, then add voice effects you like…</string>
    <string name="error_file">Error!</string>
    <string name="example">Example</string>
    <string name="exit">Exit</string>
    <string name="exit_alert">Exit Alert !</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_description">Download</string>
    <string name="exo_download_downloading">Downloading</string>
    <string name="exo_download_failed">Download failed</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="exo_download_paused">Downloads paused</string>
    <string name="exo_download_paused_for_network">Downloads waiting for network</string>
    <string name="exo_download_paused_for_wifi">Downloads waiting for WiFi</string>
    <string name="exo_download_removing">Removing downloads</string>
    <string name="extraterrestrial">Extraterrestrial</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="file_name">File Name</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="grand_canyon">Grand Canyon</string>
    <string name="grantPermission">Permission Granted</string>
    <string name="helium">Helium</string>
    <string name="hexafluoride">Hexafluoride</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hindi">Hindi</string>
    <string name="indonesia">Indonesia</string>
    <string name="language">Language</string>
    <string name="language_is_not_supported">Language is not supported</string>
    <string name="language_selected">Language Selected</string>
    <string name="last_crossed">LastCrossed</string>
    <string name="loading">Loading…</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="megaphone">Megaphone</string>
    <string name="menu_home">Home</string>
    <string name="merge_audio">Merge Audio</string>
    <string name="merging">Merging</string>
    <string name="monster">Monster</string>
    <string name="music_file_name">MusicFileName</string>
    <string name="my_audio">My Audio</string>
    <string name="my_voice">My Voice</string>
    <string name="nervous">Nervous</string>
    <string name="next">Next</string>
    <string name="normal">Normal</string>
    <string name="notification">Notification</string>
    <string name="notification_recording">Recording…</string>
    <string name="offline_notification_text">Tap to open ad</string>
    <string name="offline_notification_title">View the ad you saved when you were offline</string>
    <string name="offline_opt_in_confirm">OK</string>
    <string name="offline_opt_in_confirmation">You\'ll get a notification with the link when you\'re back online</string>
    <string name="offline_opt_in_decline">No thanks</string>
    <string name="offline_opt_in_message">We\'ll send you a notification with a link to the advertiser site.</string>
    <string name="offline_opt_in_title">Open ad when you\'re back online.</string>
    <string name="original_position">Original Position</string>
    <string name="other_effects">Other Effects</string>
    <string name="people_effects">People Effects</string>
    <string name="please_enter_text">Please enter text!</string>
    <string name="please_rating_now">Please Rating Now</string>
    <string name="please_take_a_moment_to_rate_app">Please Take a Moment To Rate App</string>
    <string name="please_wait">Please wait…</string>
    <string name="portuguese">Portuguese</string>
    <string name="preview">Preview</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="ringtone">Ringtone</string>
    <string name="save">Save</string>
    <string name="set">Set</string>
    <string name="set_as_ringtone">Set as Ringtone</string>
    <string name="OK">OK</string>
    <string name="what_should_ai_character_say">What should AI character say?</string>
    <string name="select_ai_voice">Select AI Voice</string>
</resources>