<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:tag="layout/ring_set_dialog_0"
        android:background="@drawable/bg_corner_10"
        android:padding="@dimen/_16sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:backgroundTint="@color/white">

        <TextView
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/set_as_ringtone"/>

        <RelativeLayout
            android:background="@drawable/bg_record"
            android:padding="@dimen/_12ssp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                android:textColor="@color/grayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ringtone"
                android:layout_centerVertical="true"/>

            <RadioButton
                android:id="@+id/rb_ringtones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:background="@drawable/bg_record"
            android:padding="@dimen/_12ssp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                android:textColor="@color/grayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm"
                android:layout_centerVertical="true"/>

            <RadioButton
                android:id="@+id/rb_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:background="@drawable/bg_record"
            android:padding="@dimen/_12ssp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                android:textColor="@color/grayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification"
                android:layout_centerVertical="true"/>

            <RadioButton
                android:id="@+id/rb_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:weightSum="2">

            <TextView
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center"
                android:id="@+id/tv_set"
                android:background="@drawable/bg_gradient"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:text="@string/set"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/_14sdp"/>

            <TextView
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                android:textColor="@color/grayText"
                android:gravity="center"
                android:id="@+id/tv_cancel"
                android:background="@drawable/bg_record"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:text="@string/cancel"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

</layout>
