<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:tag="layout/activity_txt_to_audio_0"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:orientation="vertical"
            android:tag="binding_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/banner1">
            <include
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                layout="@layout/layout_toolbar"/>
            <TextView
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:id="@+id/idTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:text="@string/change_voice_language"
                android:layout_below="@+id/toolbar"
                android:layout_marginHorizontal="@dimen/_16sdp"/>

            <RelativeLayout
                android:id="@+id/tv_locate"
                android:background="@drawable/bg_corner_10"
                android:padding="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:layout_below="@+id/idTxt"
                android:backgroundTint="@color/colorBlue"
                android:layout_marginHorizontal="@dimen/_16sdp">

                <ImageView
                    android:id="@+id/imgFlag"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@mipmap/ic_english"/>

                <TextView
                    android:textSize="@dimen/_19ssp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:id="@+id/tvCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_toEndOf="@+id/imgFlag"/>

                <ImageView
                    android:id="@+id/imgArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_drop_down"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>

            <EditText
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/black"
                android:textColorHint="@color/grayText"
                android:gravity="top"
                android:id="@+id/input"
                android:background="@drawable/bg_record"
                android:padding="@dimen/_15sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_220sdp"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:hint="@string/enter_text_to_generate_audio"
                android:layout_below="@+id/tv_locate"
                android:inputType="textMultiLine"
                android:backgroundTint="@color/color_voicelist_bg"
                android:backgroundTintMode="@null"
                android:layout_marginHorizontal="@dimen/_16sdp"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:id="@+id/ll_loading"
                android:background="#40000000"
                android:visibility="gone"
                android:clickable="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/please_wait"
                    android:fontFamily="@font/poppins_regular"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_next"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_22sdp"
                android:background="@drawable/bg_gradient"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/input" />
        </RelativeLayout>

        <RelativeLayout
            android:gravity="center"
            android:id="@+id/banner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            <RelativeLayout
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </RelativeLayout>

</layout>
