<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:tag="layout/activity_txt_to_audio_0"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:orientation="vertical"
            android:tag="binding_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/banner1">
            <include
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                layout="@layout/layout_toolbar"/>

            <TextView
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:id="@+id/idTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/what_should_ai_character_say"
                android:layout_below="@+id/toolbar"
                android:layout_marginHorizontal="@dimen/_16sdp"/>

            <EditText
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/black"
                android:textColorHint="@color/grayText"
                android:gravity="top"
                android:id="@+id/input"
                android:background="@drawable/bg_record"
                android:padding="@dimen/_15sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_220sdp"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:hint="@string/enter_text_to_generate_audio"
                android:layout_below="@+id/idTxt"
                android:inputType="textMultiLine"
                android:backgroundTint="@color/color_voicelist_bg"
                android:backgroundTintMode="@null"
                android:layout_marginHorizontal="@dimen/_16sdp"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="000/200"
                android:id="@+id/tv_count"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="@color/grayText"
                android:layout_below="@id/input"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:id="@+id/idTxt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/select_ai_voice"
                android:layout_below="@+id/tv_count"
                android:layout_marginHorizontal="@dimen/_16sdp"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_8sdp"
                android:layout_above="@+id/tv_next"
                android:layout_below="@+id/idTxt1" />

            <TextView
                android:id="@+id/tv_next"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_22sdp"
                android:background="@drawable/bg_gradient"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/input" />
        </RelativeLayout>

        <RelativeLayout
            android:gravity="center"
            android:id="@+id/banner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            <RelativeLayout
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </RelativeLayout>

</layout>
